fix(ags): fix active ws

--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -3,18 +3,20 @@ cl_nameplates 0
 cl_nameplates_size 0
 cl_text_entities 0
 cl_text_entities_size 50
+cl_autoswitch_weapons 0
 cl_showhud_score 0
+cl_showhud_player_position 1
 cl_mouse_max_distance 350
 cl_show_welcome 0
 cl_download_community_skins 1
-player_use_custom_color 1
 player_color_body 7717415
 player_color_feet 1891083
-player_skin "koon"
+player_skin "ram"
 player_default_eyes 2
-ui_settings_page 6
-ui_toolbox_page 1
-ui_server_address "62.122.215.19:8319"
+ui_page 9
+ui_settings_page 8
+ui_toolbox_page 2
+ui_server_address "45.141.57.22:8337"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -26,17 +28,21 @@ dummy_default_eyes 2
 cl_skip_start_menu 1
 player_name "=phacrum="
 player_clan "desufnoc"
-cl_assets_entities "comfort"
+player_country 807
+cl_skin_filter_string "ra"
+cl_assets_entities "InsomniaBrown_Entities"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
 br_filter_string ""
+br_filter_login 0
 br_cached_best_serverinfo_url "https://master1.ddnet.org/ddnet/15/servers.json"
 br_sort_order 0
 br_demo_sort 2
 br_demo_sort_order 1
 snd_volume 32
 snd_ambient_volume 0
+snd_nonactive_mute 1
 snd_gun 0
 gfx_screen 1
 gfx_screen_width 1920
@@ -48,8 +54,8 @@ gfx_refresh_rate 1000
 cl_race_binds_set 1
 cl_race_show_ghost 0
 cl_overlay_entities 100
-cl_background_entities_color 1441883
-cl_background_entities "bit2.map"
+cl_background_entities_color 91
+cl_background_entities "bit2x.mapx"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
@@ -111,25 +117,6 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
-add_excluded_community "unique"
-add_excluded_community "nobyfng"
-add_excluded_community "blockworlds"
-add_excluded_community "midfun"
-add_excluded_community "teesports"
-add_excluded_community "none"
-add_excluded_country "unique" "CAN"
-add_excluded_country "unique" "TWN"
-add_excluded_country "unique" "USA"
-add_excluded_country "blockworlds" "RUS"
-add_excluded_country "nobyfng" "ZAF"
-add_excluded_country "nobyfng" "KOR"
-add_excluded_country "nobyfng" "TWN"
-add_excluded_country "nobyfng" "CHN"
-add_excluded_country "nobyfng" "USA"
-add_excluded_country "nobyfng" "BRA"
-add_excluded_country "nobyfng" "CHL"
-add_excluded_country "nobyfng" "SGP"
-add_excluded_country "nobyfng" "RUS"
 add_excluded_country "ddnet" "IRN"
 add_excluded_country "ddnet" "UKR"
 add_excluded_country "ddnet" "CHN"
@@ -142,8 +129,21 @@ add_excluded_country "ddnet" "CHL"
 add_excluded_country "ddnet" "IND"
 add_excluded_country "ddnet" "KOR"
 add_excluded_country "ddnet" "ARG"
-add_excluded_country "ddnet" "TWN"
 add_excluded_country "ddnet" "ZAF"
+add_excluded_country "ddnet" "TWN"
+add_excluded_country "nobyfng" "RUS"
+add_excluded_country "nobyfng" "SGP"
+add_excluded_country "nobyfng" "CHL"
+add_excluded_country "nobyfng" "BRA"
+add_excluded_country "nobyfng" "USA"
+add_excluded_country "nobyfng" "CHN"
+add_excluded_country "nobyfng" "TWN"
+add_excluded_country "nobyfng" "KOR"
+add_excluded_country "nobyfng" "ZAF"
+add_excluded_country "blockworlds" "RUS"
+add_excluded_country "unique" "USA"
+add_excluded_country "unique" "TWN"
+add_excluded_country "unique" "CAN"
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
 add_friend "" "Eagle"
@@ -202,7 +202,6 @@ add_friend "krümelmonster" "|*KoG*|"
 add_friend "Welf" ""
 add_friend "Fox" "°SoJ°"
 add_friend "Brokecdx-" "Inner peace"
-add_friend "paradise" "Inner peace"
 add_friend "Moni" "υηιqυє"
 add_friend "LuckyStrike" "FirstClass"
 add_friend "Yuzu" "QWuitnetst/"
@@ -252,7 +251,6 @@ add_friend "Pulsar" "oco"
 add_friend "Quasar" "oco"
 add_friend "Asuna" ""
 add_friend "Ninja_Valik" "Glory to UA"
-add_friend "NootNoot" "dog"
 add_friend "Baran Nashor" ""
 add_friend "Chirua" ""
 add_friend "AMO YİYEN" ""
@@ -297,6 +295,14 @@ add_friend "TheGhast" "HyPax"
 add_friend "Vappy" "NωG | uq"
 add_friend "Skeptar" ""
 add_friend "<BµMm>" "flawLess"
+add_friend "Zhady" "YEP MY ASS"
+add_friend "paradise" "Inner peace"
+add_friend "Pimiento <3" "υׁcsm"
+add_friend "Rico" "Birds"
+add_friend "Delo" "Chicken"
+add_friend "про_100_ти" ""
+add_friend "suki" "lovetee"
+add_friend "DoubleDipp" ""
 br_filter_exclude_communities "kog,unique,nobyfng,none"
 br_filter_exclude_countries "RUS,IRN,TUR,CHL,BRA,ARG,PER,USA,CHN,TWN,KOR,SGP,IND,AUS,ZAF,RUS,CHN,RUS"
 br_filter_exclude_types "Block,Infection,iCTF,Vanilla,FNG,TeeWare,Bomb,Block,FNG,Bomb,TeeWare,Vanilla,iCTF,Infection,Block,FNG,TeeWare,Vanilla"
