--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -4,6 +4,17 @@
 ###  Plugins  ###
 #################
 
+exec-once = hyprpm enable Hyprspace
+plugin {
+    overview {
+        # hideTopLayers = 1
+        # hideRealLayers = 1
+        # hideOverlayLayers = 0
+        # affectStrut = 0
+        overrideGaps = 0
+    }
+}
+
 exec-once = hyprpm enable split-monitor-workspaces
 plugin {
     split-monitor-workspaces {
@@ -20,8 +31,9 @@ exec-once = ags &
 exec-once = swww-daemon &
 exec-once = firefox &
 exec-once = wlsunset -l 49.87 -L 8.65 &
-exec-once = hypridle &
-exec-once = (sleep 1 && hyprdim -d 500) &
+# exec-once = hypridle &
+exec-once = (pkill hyprdim; sleep 2 && hyprdim -d 500) &
+exec-once = hyprctl setcursor phinger-cursors-light 48 &
 
 $gnome-schema = org.gnome.desktop.interface
 exec-once = gsettings set $gnome-schema icon-theme "WhiteSur"
@@ -142,7 +154,9 @@ misc {
     disable_hyprland_logo = true
 }
 
-
+cursor {
+    no_hardware_cursors = true
+}
 #############
 ### INPUT ###
 #############
@@ -194,6 +208,8 @@ bind = $mod, S, togglefloating,
 bind = $mod, F, fullscreen,
 bind = $mod, T, pseudo, # dwindle
 bind = $mod, V, togglesplit, # dwindle
+
+# bind = $mod, TAB, overview:toggle
 
 # special
 bind = $mod, X, togglespecialworkspace, magic
