--- a/gui/zed-editor/.config/zed/settings.json
+++ b/gui/zed-editor/.config/zed/settings.json
@@ -6,9 +6,9 @@
   },
   "relative_line_numbers": true,
   "vim_mode": true,
-  "theme": "Ayu Light",
+  "theme": "Min Dark",
   "ui_font_size": 20,
-  "ui_font_family": "Lexend",
+  "ui_font_family": "Maple Mono SC NF",
   "buffer_font_family": "Maple Mono SC NF",
   "buffer_font_size": 20,
   "buffer_font_features": {
