feat(nvim): avante, neotree

--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -1,22 +1,24 @@
 cl_antiping 1
 cl_nameplates 0
 cl_nameplates_size 0
+cl_nameplates_strong 1
 cl_text_entities 0
 cl_text_entities_size 50
 cl_autoswitch_weapons 0
 cl_showhud_score 0
-cl_showhud_player_position 1
+cl_freezebars_alpha_inside_freeze 13
 cl_mouse_max_distance 350
 cl_show_welcome 0
 cl_download_community_skins 1
+cl_default_zoom 11
 player_color_body 7717415
 player_color_feet 1891083
 player_skin "ram"
 player_default_eyes 2
-ui_page 9
-ui_settings_page 8
-ui_toolbox_page 2
-ui_server_address "45.141.57.22:8337"
+ui_page 7
+ui_settings_page 2
+ui_toolbox_page 1
+ui_server_address "176.9.114.238:8313"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -30,7 +32,7 @@ player_name "=phacrum="
 player_clan "desufnoc"
 player_country 807
 cl_skin_filter_string "ra"
-cl_assets_entities "InsomniaBrown_Entities"
+cl_assets_entities "ddnet_n9_edit_last_transperent_20"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
@@ -53,9 +55,11 @@ gfx_desktop_height 1080
 gfx_refresh_rate 1000
 cl_race_binds_set 1
 cl_race_show_ghost 0
+cl_show_others 2
 cl_overlay_entities 100
-cl_background_entities_color 91
-cl_background_entities "bit2x.mapx"
+cl_showquads 0
+cl_background_entities_color 45
+cl_background_entities "bit2.map"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
@@ -67,7 +71,7 @@ gfx_3d_texture_analysis_renderer "NVIDIA GeForce RTX 3060/PCIe/SSE2"
 gfx_3d_texture_analysis_version "4.6.0 NVIDIA 525.78.01"
 unbindall
 bind a "+weapon4"
-bind b "say (づ ᴗ _ᴗ)づ  b"
+bind b "say_team (づ ᴗ _ᴗ)づ  b"
 bind c "+weapon5"
 bind d "+weapon1"
 bind e "+weapon2"
@@ -84,14 +88,14 @@ bind s "+left"
 bind t "say /spec"
 bind u "rcon unsuper"
 bind v "toggle cl_dummy 0 1"
-bind w "toggle cl_text_entities 0 1; toggle cl_nameplates 0 1"
+bind w "toggle cl_text_entities 0 1; toggle cl_nameplates 0 1; "
 bind x "say /r"
 bind y "+show_chat; chat team"
 bind z "toggle cl_dummy_hammer 0 1"
 bind 1 "+spectate"
 bind 3 "vote yes"
 bind 4 "vote no"
-bind 5 "say /team 10"
+bind 5 "say /team 9"
 bind 6 "say /team 27"
 bind 7 "say /team 18"
 bind return "+show_chat; chat all"
@@ -117,33 +121,35 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
+add_excluded_country "unique" "CAN"
+add_excluded_country "unique" "TWN"
+add_excluded_country "unique" "USA"
+add_excluded_country "blockworlds" "RUS"
+add_excluded_country "nobyfng" "ZAF"
+add_excluded_country "nobyfng" "KOR"
+add_excluded_country "nobyfng" "TWN"
+add_excluded_country "nobyfng" "CHN"
+add_excluded_country "nobyfng" "USA"
+add_excluded_country "nobyfng" "BRA"
+add_excluded_country "nobyfng" "CHL"
+add_excluded_country "nobyfng" "SGP"
+add_excluded_country "nobyfng" "RUS"
 add_excluded_country "ddnet" "IRN"
+add_excluded_country "ddnet" "ARG"
 add_excluded_country "ddnet" "UKR"
-add_excluded_country "ddnet" "CHN"
 add_excluded_country "ddnet" "USA"
-add_excluded_country "ddnet" "BRA"
+add_excluded_country "ddnet" "CHN"
 add_excluded_country "ddnet" "RUS"
 add_excluded_country "ddnet" "SGP"
+add_excluded_country "ddnet" "BRA"
+add_excluded_country "ddnet" "BHR"
 add_excluded_country "ddnet" "AUS"
 add_excluded_country "ddnet" "CHL"
-add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "TUR"
 add_excluded_country "ddnet" "KOR"
-add_excluded_country "ddnet" "ARG"
+add_excluded_country "ddnet" "IND"
 add_excluded_country "ddnet" "ZAF"
 add_excluded_country "ddnet" "TWN"
-add_excluded_country "nobyfng" "RUS"
-add_excluded_country "nobyfng" "SGP"
-add_excluded_country "nobyfng" "CHL"
-add_excluded_country "nobyfng" "BRA"
-add_excluded_country "nobyfng" "USA"
-add_excluded_country "nobyfng" "CHN"
-add_excluded_country "nobyfng" "TWN"
-add_excluded_country "nobyfng" "KOR"
-add_excluded_country "nobyfng" "ZAF"
-add_excluded_country "blockworlds" "RUS"
-add_excluded_country "unique" "USA"
-add_excluded_country "unique" "TWN"
-add_excluded_country "unique" "CAN"
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
 add_friend "" "Eagle"
@@ -303,6 +309,10 @@ add_friend "Delo" "Chicken"
 add_friend "про_100_ти" ""
 add_friend "suki" "lovetee"
 add_friend "DoubleDipp" ""
+add_friend "Lambert" ""
+add_friend "Deathstroke" "systematic"
+add_friend "NYZE" "handsome"
+add_friend "Игрок/" "ʍεøω c:"
 br_filter_exclude_communities "kog,unique,nobyfng,none"
 br_filter_exclude_countries "RUS,IRN,TUR,CHL,BRA,ARG,PER,USA,CHN,TWN,KOR,SGP,IND,AUS,ZAF,RUS,CHN,RUS"
 br_filter_exclude_types "Block,Infection,iCTF,Vanilla,FNG,TeeWare,Bomb,Block,FNG,Bomb,TeeWare,Vanilla,iCTF,Infection,Block,FNG,TeeWare,Vanilla"
