--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -29,7 +29,7 @@ plugin {
 #################
 exec-once = ags &
 exec-once = swww-daemon &
-exec-once = firefox &
+exec-once = zen-browser &
 exec-once = wlsunset -l 49.87 -L 8.65 &
 # exec-once = hypridle &
 exec-once = (pkill hyprdim; sleep 2 && hyprdim -d 500) &
