feat(xdg-ninja): clean up home

--- a/gui/zed-editor/.config/zed/settings.json
+++ b/gui/zed-editor/.config/zed/settings.json
@@ -17,7 +17,7 @@
   },
   "relative_line_numbers": true,
   "vim_mode": true,
-  "theme": "Ayu Light",
+  "theme": "flat᛫light",
   "ui_font_size": 20,
   "ui_font_family": "Maple Mono SC NF",
   "buffer_font_family": "Maple Mono SC NF",
