--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -274,7 +274,7 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 windowrulev2 = fullscreen,title:(DDNet Client)
 windowrulev2 = workspace 11, title:^(DDNet Client)$
-windowrulev2 = workspace 1, class:^(firefox)$
+windowrulev2 = workspace 1, class:^(zen-alpha)$
 windowrulev2 = workspace 4, title:^(Spotify (Premium|Free)?)$
 windowrulev2 = workspace 7, title:^(.*(Disc|WebC)ord.*)$
 windowrulev2 = workspace 7, title:^(discord-screenaudio)$
