--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -1,8 +1,6 @@
 cl_antiping 1
-cl_nameplates 0
 cl_nameplates_size 0
 cl_nameplates_strong 1
-cl_text_entities 0
 cl_text_entities_size 50
 cl_autoswitch_weapons 0
 cl_showhud_score 0
@@ -15,10 +13,8 @@ player_color_body 7717415
 player_color_feet 1891083
 player_skin "ram"
 player_default_eyes 2
-ui_page 7
-ui_settings_page 2
-ui_toolbox_page 1
-ui_server_address "176.9.114.238:8313"
+ui_settings_page 8
+ui_server_address "45.141.57.22:8358"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -31,8 +27,7 @@ cl_skip_start_menu 1
 player_name "=phacrum="
 player_clan "desufnoc"
 player_country 807
-cl_skin_filter_string "ra"
-cl_assets_entities "ddnet_n9_edit_last_transperent_20"
+cl_assets_entities "bd_purple"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
 cl_asset_hud "Whitney"
@@ -55,11 +50,8 @@ gfx_desktop_height 1080
 gfx_refresh_rate 1000
 cl_race_binds_set 1
 cl_race_show_ghost 0
-cl_show_others 2
-cl_overlay_entities 100
-cl_showquads 0
-cl_background_entities_color 45
-cl_background_entities "bit2.map"
+cl_background_entities_color 32
+cl_background_entities "bit2.mapx"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
@@ -121,6 +113,15 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
+add_excluded_community "kog"
+add_excluded_community "unique"
+add_excluded_community "nobyfng"
+add_excluded_community "fokkonautsplayground"
+add_excluded_community "blockworlds"
+add_excluded_community "ntcn"
+add_excluded_community "teesports"
+add_excluded_community "none"
+add_excluded_community "russkyblock"
 add_excluded_country "unique" "CAN"
 add_excluded_country "unique" "TWN"
 add_excluded_country "unique" "USA"
@@ -134,22 +135,22 @@ add_excluded_country "nobyfng" "BRA"
 add_excluded_country "nobyfng" "CHL"
 add_excluded_country "nobyfng" "SGP"
 add_excluded_country "nobyfng" "RUS"
-add_excluded_country "ddnet" "IRN"
-add_excluded_country "ddnet" "ARG"
+add_excluded_country "ddnet" "BHR"
+add_excluded_country "ddnet" "BRA"
 add_excluded_country "ddnet" "UKR"
-add_excluded_country "ddnet" "USA"
-add_excluded_country "ddnet" "CHN"
 add_excluded_country "ddnet" "RUS"
 add_excluded_country "ddnet" "SGP"
-add_excluded_country "ddnet" "BRA"
-add_excluded_country "ddnet" "BHR"
+add_excluded_country "ddnet" "TUR"
 add_excluded_country "ddnet" "AUS"
 add_excluded_country "ddnet" "CHL"
-add_excluded_country "ddnet" "TUR"
-add_excluded_country "ddnet" "KOR"
 add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "KOR"
+add_excluded_country "ddnet" "ARG"
 add_excluded_country "ddnet" "ZAF"
 add_excluded_country "ddnet" "TWN"
+add_excluded_country "ddnet" "IRN"
+add_excluded_country "ddnet" "USA"
+add_excluded_country "ddnet" "CHN"
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
 add_friend "" "Eagle"
@@ -313,6 +314,7 @@ add_friend "Lambert" ""
 add_friend "Deathstroke" "systematic"
 add_friend "NYZE" "handsome"
 add_friend "Игрок/" "ʍεøω c:"
+add_friend "HaHAxD*" "flawLess"
 br_filter_exclude_communities "kog,unique,nobyfng,none"
 br_filter_exclude_countries "RUS,IRN,TUR,CHL,BRA,ARG,PER,USA,CHN,TWN,KOR,SGP,IND,AUS,ZAF,RUS,CHN,RUS"
 br_filter_exclude_types "Block,Infection,iCTF,Vanilla,FNG,TeeWare,Bomb,Block,FNG,Bomb,TeeWare,Vanilla,iCTF,Infection,Block,FNG,TeeWare,Vanilla"
