--- a/gui/kitty/.config/kitty/kitty.conf
+++ b/gui/kitty/.config/kitty/kitty.conf
@@ -37,10 +37,14 @@ window_padding_width 10
 copy_on_select yes
 
 # Font
-font_family Maple Mono SC NF
+# font_family Maple Mono SC NF
+# font_family Julia Mono
+font_family JetBrainsMono NF
+# font_family CaskaydiaCove NF
+# font_family Iosevka Matsuri
 font_size 16
 
-modify_font cell_height 110%
+modify_font cell_height 115%
 
 font_features CommitMono-Regular +ss01 +ss02 +ss03 +ss04 +ss05
 font_features CommitMono-Bold    +ss01 +ss02 +ss03 +ss04 +ss05
@@ -51,3 +55,8 @@ font_features MapleMonoSCNF-LightItalic   +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +s
 font_features MapleMonoSCNF-Italic        +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
 font_features MapleMonoSCNF-BoldItalic    +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
 font_features MapleMonoSCNF-Bold          +cv01 +cv02 +cv04 +ss01 +ss02 +ss04 +ss05
+
+font_features JetBrainsMonoNF-Regular                 +ss02 +cv18 +cv14
+font_features JetBrainsMonoNF-SemiBold                +ss02 +cv18 +cv14
+font_features JetBrainsMonoNF-Italic                  +ss02 +cv18 +cv14
+font_features JetBrainsMonoNF-SemiBoldItalic          +ss02 +cv18 +cv14
