--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -105,8 +105,9 @@ decoration {
     rounding = 10
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    # active_opacity = 0.9
+    # inactive_opacity = 0.5
+
 
     drop_shadow = true
     shadow_range = 8
@@ -116,7 +117,10 @@ decoration {
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
-        enabled = true
+        enabled = false
+        passes = 4
+        size = 10
+        ignore_opacity = true
     }
 }
 
@@ -125,7 +129,6 @@ animations {
     enabled = false
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
@@ -164,7 +167,7 @@ cursor {
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = us
-    kb_variant =
+    kb_variant = altgr-intl
     kb_model =
     kb_options =
     kb_rules =
