feat(ags, hypr): update bar, scrots, nvim...

--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -11,13 +11,15 @@ cl_mouse_max_distance 350
 cl_show_welcome 0
 cl_download_community_skins 1
 cl_default_zoom 11
-player_color_body 7717415
-player_color_feet 1891083
-player_skin "ram"
+player_use_custom_color 1
+player_color_body 6073088
+player_color_feet 9174843
+player_skin "giraffe"
 player_default_eyes 2
-ui_settings_page 8
-ui_toolbox_page 2
-ui_server_address "51.89.23.241:8338"
+ui_page 9
+ui_settings_page 9
+ui_toolbox_page 1
+ui_server_address "45.141.57.22:8322"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -29,10 +31,11 @@ dummy_default_eyes 2
 cl_skip_start_menu 1
 player_name "=phacrum="
 player_clan "desufnoc"
-player_country 807
-cl_assets_entities "miximinimalist"
+player_country 850
+cl_skin_filter_string "ra"
+cl_assets_entities "bd_purple"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
-cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
+cl_asset_emoticons "pepe"
 cl_asset_hud "Whitney"
 br_filter_string ""
 br_filter_login 0
@@ -40,16 +43,15 @@ br_cached_best_serverinfo_url "https://master1.ddnet.org/ddnet/15/servers.json"
 br_sort_order 0
 br_demo_sort 2
 br_demo_sort_order 1
-snd_volume 32
+snd_volume 43
 snd_ambient_volume 0
 snd_nonactive_mute 1
 snd_gun 0
-gfx_screen 1
-gfx_screen_width 1920
-gfx_screen_height 1080
-gfx_screen_refresh_rate 144
-gfx_desktop_width 1920
-gfx_desktop_height 1080
+gfx_screen_width 3840
+gfx_screen_height 2160
+gfx_screen_refresh_rate 60
+gfx_desktop_width 3840
+gfx_desktop_height 2160
 gfx_refresh_rate 1000
 cl_race_binds_set 1
 cl_race_show_ghost 0
@@ -74,15 +76,17 @@ bind e "+weapon2"
 bind f "+right"
 bind g "say /lock"
 bind h "emote 2"
-bind i "rcon super"
+bind i "say Чушпан"
 bind j "rcon down"
 bind k "rcon up"
 bind l "say /login pJg5V8GOysdY2wSS"
+bind o "say Я расстроен, что ты не помог мне"
+bind p "say Я люблю тебя"
 bind q "+showhookcoll"
 bind r "say /pause"
 bind s "+left"
 bind t "say /spec"
-bind u "rcon unsuper"
+bind u "say Вернись и помоги мне"
 bind v "toggle cl_dummy 0 1"
 bind w "toggle cl_text_entities 0 1; toggle cl_nameplates 0 1; "
 bind x "say /r"
@@ -95,8 +99,8 @@ bind 5 "say /team 9"
 bind 6 "say /team 27"
 bind 7 "say /team 18"
 bind return "+show_chat; chat all"
+bind backspace "+jump"
 bind tab "+scoreboard"
-bind space "+jump"
 bind f1 "toggle_local_console"
 bind f2 "toggle_remote_console"
 bind f5 "say /pausevoted"
@@ -117,35 +121,35 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
-add_excluded_country "unique" "CAN"
-add_excluded_country "unique" "TWN"
-add_excluded_country "unique" "USA"
-add_excluded_country "blockworlds" "RUS"
-add_excluded_country "nobyfng" "ZAF"
-add_excluded_country "nobyfng" "KOR"
-add_excluded_country "nobyfng" "TWN"
-add_excluded_country "nobyfng" "CHN"
-add_excluded_country "nobyfng" "USA"
-add_excluded_country "nobyfng" "BRA"
-add_excluded_country "nobyfng" "CHL"
-add_excluded_country "nobyfng" "SGP"
-add_excluded_country "nobyfng" "RUS"
-add_excluded_country "ddnet" "TWN"
-add_excluded_country "ddnet" "ZAF"
-add_excluded_country "ddnet" "IND"
 add_excluded_country "ddnet" "IRN"
 add_excluded_country "ddnet" "ARG"
 add_excluded_country "ddnet" "UKR"
-add_excluded_country "ddnet" "CHN"
 add_excluded_country "ddnet" "USA"
+add_excluded_country "ddnet" "CHN"
 add_excluded_country "ddnet" "RUS"
 add_excluded_country "ddnet" "SGP"
-add_excluded_country "ddnet" "BRA"
+add_excluded_country "ddnet" "KOR"
 add_excluded_country "ddnet" "BHR"
 add_excluded_country "ddnet" "AUS"
 add_excluded_country "ddnet" "CHL"
+add_excluded_country "ddnet" "BRA"
 add_excluded_country "ddnet" "TUR"
-add_excluded_country "ddnet" "KOR"
+add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "ZAF"
+add_excluded_country "ddnet" "TWN"
+add_excluded_country "nobyfng" "RUS"
+add_excluded_country "nobyfng" "SGP"
+add_excluded_country "nobyfng" "CHL"
+add_excluded_country "nobyfng" "BRA"
+add_excluded_country "nobyfng" "USA"
+add_excluded_country "nobyfng" "CHN"
+add_excluded_country "nobyfng" "TWN"
+add_excluded_country "nobyfng" "KOR"
+add_excluded_country "nobyfng" "ZAF"
+add_excluded_country "blockworlds" "RUS"
+add_excluded_country "unique" "USA"
+add_excluded_country "unique" "TWN"
+add_excluded_country "unique" "CAN"
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
 add_friend "" "Eagle"
@@ -310,6 +314,7 @@ add_friend "Deathstroke" "systematic"
 add_friend "NYZE" "handsome"
 add_friend "Игрок/" "ʍεøω c:"
 add_friend "HaHAxD*" "flawLess"
+add_friend "Bolox" "old noob"
 br_filter_exclude_communities "kog,unique,nobyfng,none"
 br_filter_exclude_countries "RUS,IRN,TUR,CHL,BRA,ARG,PER,USA,CHN,TWN,KOR,SGP,IND,AUS,ZAF,RUS,CHN,RUS"
 br_filter_exclude_types "Block,Infection,iCTF,Vanilla,FNG,TeeWare,Bomb,Block,FNG,Bomb,TeeWare,Vanilla,iCTF,Infection,Block,FNG,TeeWare,Vanilla"
