--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -7,11 +7,14 @@
 exec-once = hyprpm enable Hyprspace
 plugin {
     overview {
-        # hideTopLayers = 1
-        # hideRealLayers = 1
+        # hideTopLayers = 0
+        # hideRealLayers = 0
         # hideOverlayLayers = 0
         # affectStrut = 0
-        overrideGaps = 0
+        # overrideGaps = 1
+        showEmptyWorkspace = 0
+        # showSpecialWorkspace = 0
+        # exitOnSwitch = 1
     }
 }
 
@@ -21,6 +24,7 @@ plugin {
         count = 10
         keep_focused = 1
         enable_notifications = 0
+        enable_persistent_workspaces = 1
     }
 }
 
@@ -28,11 +32,14 @@ plugin {
 ### AUTOSTART ###
 #################
 exec-once = ags &
+exec-once = mkfifo /tmp/wobpipe && tail -f /tmp/wobpipe | wob &
+exec-once = ianny & # take breaks
 exec-once = swww-daemon &
+exec-once = systemctl --user start wallpaper_timer.service
 exec-once = zen-browser &
 exec-once = wlsunset -l 49.87 -L 8.65 &
 # exec-once = hypridle &
-exec-once = (pkill hyprdim; sleep 2 && hyprdim -d 500) &
+exec-once = (pkill hyprdim; sleep 2 && hyprdim --persist --duration 500 --strength 0.6) &
 exec-once = hyprctl setcursor phinger-cursors-light 48 &
 
 $gnome-schema = org.gnome.desktop.interface
@@ -85,7 +92,7 @@ general {
     gaps_in = 15
     gaps_out = 30
 
-    border_size = 3
+    border_size = 0
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(ffffffaa)
@@ -117,10 +124,10 @@ decoration {
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
-        enabled = false
-        passes = 4
-        size = 10
-        ignore_opacity = true
+        enabled = true
+        # passes = 2
+        # size = 10
+        # ignore_opacity = true
     }
 }
 
@@ -191,14 +198,15 @@ gestures {
 ####################
 $mod = SUPER # Sets "Windows" key as main modifier
 
-bind = , XF86MonBrightnessUp,     exec, $brightness 5%+
-bind = , XF86MonBrightnessDown,   exec, $brightness 5%-
-bind = , XF86AudioRaiseVolume, exec, pamixer --increase 5
-bind = , XF86AudioLowerVolume, exec, pamixer --decrease 5
+binde = , XF86MonBrightnessUp,     exec, $brightness 5%+
+binde = , XF86MonBrightnessDown,   exec, $brightness 5%-
+binde = , XF86AudioRaiseVolume, exec, pamixer --increase 5 && pamixer --get-volume > /tmp/wobpipe
+binde = , XF86AudioLowerVolume, exec, pamixer --decrease 5 && pamixer --get-volume > /tmp/wobpipe
 bind = , XF86AudioMute, exec, pamixer --togle-mute
 bind = ,XF86AudioMicMute, exec, pamixer --default-source -t
 
 bind = $mod, P, exec, hyprshot --mode region --output $HOME/Pictures/Scrots --freeze
+bind = $mod shift, P, exec, hyprshot --mode region --raw --freeze | satty --filename - --fullscreen --output-filename $HOME/Pictures/Scrots/satty-$(date '+%Y%m%d-%H:%M:%S').png
 
 bind = $mod, return, exec, kitty
 bind = $mod, D, exec, anyrun
@@ -212,7 +220,7 @@ bind = $mod, F, fullscreen,
 bind = $mod, T, pseudo, # dwindle
 bind = $mod, V, togglesplit, # dwindle
 
-# bind = $mod, TAB, overview:toggle
+bind = $mod, TAB, overview:toggle
 
 # special
 bind = $mod, X, togglespecialworkspace, magic
@@ -289,4 +297,4 @@ windowrulev2 = size 50% 50%,title:(Save As)
 windowrulev2 = center,title:(.* Bitwarden — Mozilla Firefox)$
 windowrulev2 = size 50% 50%,title:(.* Bitwarden — Mozilla Firefox)$
 
-layerrule = blur,waybar
+layerrule = blur,bar
