fix(ags): media title for tracks without artists

--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -38,7 +38,7 @@ exec-once = swww-daemon &
 exec-once = systemctl --user start wallpaper_timer.service
 exec-once = zen-browser &
 exec-once = wlsunset -l 49.87 -L 8.65 &
-# exec-once = hypridle &
+exec-once = hypridle &
 exec-once = (pkill hyprdim; sleep 2 && hyprdim --persist --duration 500 --strength 0.6) &
 exec-once = hyprctl setcursor phinger-cursors-light 48 &
 
