--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -10,16 +10,15 @@ cl_freezebars_alpha_inside_freeze 13
 cl_mouse_max_distance 350
 cl_show_welcome 0
 cl_download_community_skins 1
-cl_default_zoom 11
 player_use_custom_color 1
 player_color_body 6073088
 player_color_feet 9174843
-player_skin "giraffe"
+player_skin "Mouse_tee"
 player_default_eyes 2
 ui_page 9
-ui_settings_page 9
-ui_toolbox_page 1
-ui_server_address "45.141.57.22:8322"
+ui_settings_page 3
+ui_toolbox_page 2
+ui_server_address "176.9.114.238:8368"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -32,8 +31,8 @@ cl_skip_start_menu 1
 player_name "=phacrum="
 player_clan "desufnoc"
 player_country 850
-cl_skin_filter_string "ra"
-cl_assets_entities "bd_purple"
+cl_skin_filter_string "koon"
+cl_assets_entities "InsomniaBrown_Entities"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "pepe"
 cl_asset_hud "Whitney"
@@ -121,22 +120,22 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
-add_excluded_country "ddnet" "IRN"
-add_excluded_country "ddnet" "ARG"
-add_excluded_country "ddnet" "UKR"
-add_excluded_country "ddnet" "USA"
-add_excluded_country "ddnet" "CHN"
-add_excluded_country "ddnet" "RUS"
-add_excluded_country "ddnet" "SGP"
-add_excluded_country "ddnet" "KOR"
-add_excluded_country "ddnet" "BHR"
-add_excluded_country "ddnet" "AUS"
-add_excluded_country "ddnet" "CHL"
-add_excluded_country "ddnet" "BRA"
-add_excluded_country "ddnet" "TUR"
-add_excluded_country "ddnet" "IND"
 add_excluded_country "ddnet" "ZAF"
 add_excluded_country "ddnet" "TWN"
+add_excluded_country "ddnet" "ARG"
+add_excluded_country "ddnet" "IRN"
+add_excluded_country "ddnet" "BRA"
+add_excluded_country "ddnet" "UKR"
+add_excluded_country "ddnet" "CHN"
+add_excluded_country "ddnet" "USA"
+add_excluded_country "ddnet" "SGP"
+add_excluded_country "ddnet" "RUS"
+add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "CHL"
+add_excluded_country "ddnet" "AUS"
+add_excluded_country "ddnet" "TUR"
+add_excluded_country "ddnet" "KOR"
+add_excluded_country "ddnet" "BHR"
 add_excluded_country "nobyfng" "RUS"
 add_excluded_country "nobyfng" "SGP"
 add_excluded_country "nobyfng" "CHL"
@@ -150,6 +149,21 @@ add_excluded_country "blockworlds" "RUS"
 add_excluded_country "unique" "USA"
 add_excluded_country "unique" "TWN"
 add_excluded_country "unique" "CAN"
+add_excluded_type "ddnet" "Monster"
+add_excluded_type "ddnet" "TeeSmash"
+add_excluded_type "ddnet" "FNG"
+add_excluded_type "ddnet" "gCTF"
+add_excluded_type "ddnet" "Block"
+add_excluded_type "ddnet" "iCTF"
+add_excluded_type "ddnet" "Tutorial"
+add_excluded_type "ddnet" "zCatch"
+add_excluded_type "ddnet" "Vanilla"
+add_excluded_type "ddnet" "Test"
+add_excluded_type "ddnet" "Bomb"
+add_excluded_type "ddnet" "Infection"
+add_excluded_type "ddnet" "TeeWare"
+add_excluded_type "ddnet" "Foot"
+add_excluded_type "ddnet" "xPanic"
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
 add_friend "" "Eagle"
@@ -315,6 +329,8 @@ add_friend "NYZE" "handsome"
 add_friend "Игрок/" "ʍεøω c:"
 add_friend "HaHAxD*" "flawLess"
 add_friend "Bolox" "old noob"
+add_friend "Tropo" "MentosBoyz"
+add_friend "TeeHee" ""
 br_filter_exclude_communities "kog,unique,nobyfng,none"
 br_filter_exclude_countries "RUS,IRN,TUR,CHL,BRA,ARG,PER,USA,CHN,TWN,KOR,SGP,IND,AUS,ZAF,RUS,CHN,RUS"
 br_filter_exclude_types "Block,Infection,iCTF,Vanilla,FNG,TeeWare,Bomb,Block,FNG,Bomb,TeeWare,Vanilla,iCTF,Infection,Block,FNG,TeeWare,Vanilla"
