--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -4,20 +4,21 @@
 ###  Plugins  ###
 #################
 
-exec-once = hyprpm enable Hyprspace
-plugin {
-    overview {
-        # hideTopLayers = 0
-        # hideRealLayers = 0
-        # hideOverlayLayers = 0
-        # affectStrut = 0
-        # overrideGaps = 1
-        showEmptyWorkspace = 0
-        # showSpecialWorkspace = 0
-        # exitOnSwitch = 1
-    }
-}
+# exec-once = hyprpm enable Hyprspace
+# plugin {
+#     overview {
+#         # hideTopLayers = 0
+#         # hideRealLayers = 0
+#         # hideOverlayLayers = 0
+#         # affectStrut = 0
+#         # overrideGaps = 1
+#         # showEmptyWorkspace = 0
+#         # showSpecialWorkspace = 0
+#         # exitOnSwitch = 1
+#     }
+# }
 
+# exec-once = hyprpm reload -n
 exec-once = hyprpm enable split-monitor-workspaces
 plugin {
     split-monitor-workspaces {
@@ -38,8 +39,8 @@ exec-once = swww-daemon &
 exec-once = systemctl --user start wallpaper_timer.service
 exec-once = zen-browser &
 exec-once = wlsunset -l 49.87 -L 8.65 &
-exec-once = hypridle &
-exec-once = (pkill hyprdim; sleep 2 && hyprdim --persist --duration 500 --strength 0.6) &
+# exec-once = hypridle &
+exec-once = (pkill hyprdim; sleep 2 && hyprdim --duration 500 --strength 0.6) &
 exec-once = hyprctl setcursor phinger-cursors-light 48 &
 
 $gnome-schema = org.gnome.desktop.interface
@@ -116,11 +117,13 @@ decoration {
     # inactive_opacity = 0.5
 
 
-    drop_shadow = true
-    shadow_range = 8
-    shadow_offset = -3, 5
-    shadow_render_power = 4
-    col.shadow = rgba(1a1a1a33)
+    shadow {
+        enabled = true
+        range = 8
+        offset = -3, 5
+        render_power = 4
+        color= rgba(1a1a1a33)
+    }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -211,7 +214,7 @@ bind = $mod shift, P, exec, hyprshot --mode region --raw --freeze | satty --file
 bind = $mod, return, exec, kitty
 bind = $mod, D, exec, anyrun
 
-bind = $mod, C, killactive,
+bind = $mod, q, killactive,
 bind = $mod shift, Q, exit,
 
 # layout
@@ -220,7 +223,7 @@ bind = $mod, F, fullscreen,
 bind = $mod, T, pseudo, # dwindle
 bind = $mod, V, togglesplit, # dwindle
 
-bind = $mod, TAB, overview:toggle
+# bind = $mod, TAB, overview:toggle
 
 # special
 bind = $mod, X, togglespecialworkspace, magic
