--- a/wm/hyprland/.config/hypr/hypridle.conf
+++ b/wm/hyprland/.config/hypr/hypridle.conf
@@ -10,5 +10,6 @@ general {
 listener {
     timeout = 300                            # in seconds
     on-timeout = hyprlock                    # command to run when timeout has passed
-    on-resume = notify-send "Welcome back!"  # command to run when activity is detected after timeout has fired.
+    # on-resume = notify-send "Welcome back!"  # command to run when activity is detected after timeout has fired.
+    on-resume = pkill ags; ags &
 }
